[gd_scene load_steps=5 format=3 uid="uid://bi00tlp38rnc3"]

[ext_resource type="Theme" uid="uid://4xcdimhfc2hy" path="res://default_theme_tools.tres" id="1"]
[ext_resource type="Script" path="res://tools/editor/WorkshopUploadForm.gd" id="2"]

[sub_resource type="StyleBoxEmpty" id="1"]

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.2, 0.231373, 0.309804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.462745, 0.478431, 0.52549, 1)

[node name="Window" type="Window"]
theme = ExtResource("1")
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="DataLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Title"

[node name="TitleLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Description"

[node name="DescriptionLineEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Changelog"

[node name="UpdateDescriptionLineEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Before uploading, please make sure that:
- You don't upload content you don't have the rights or permission to upload.
- Your upload doesn't break the Steam terms of service"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "I comply with the conditions stated"

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/normal = SubResource("1")
bbcode_enabled = true
text = "By submitting this item, you agree to the workshop terms of service"

[node name="UploadButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Upload"

[node name="UploadDialog" type="Popup" parent="."]
exclusive = true

[node name="Panel" type="Panel" parent="UploadDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1.0
theme_override_styles/panel = SubResource("2")

[node name="MarginContainer" type="MarginContainer" parent="UploadDialog/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -32.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UploadDialog/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UploadDialog/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Uploading to the workshop, hold tight."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="UploadDialog/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.0

[node name="PostUploadDialog" type="AcceptDialog" parent="."]

[node name="ErrorDialog" type="AcceptDialog" parent="."]
dialog_text = "There "

[node name="FileNotFoundDialog" type="ConfirmationDialog" parent="."]
size = Vector2i(200, 273)
dialog_text = "This song appears to have been uploaded previously, but we cannot find it on the workshop anymore, would you like to instead upload it from scratch?"
dialog_autowrap = true
